--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^6.7.2",
     "mongoose": "^5.7.11",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.0",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3"
   },
@@ -37,6 +38,7 @@
     "@types/jest": "^24.0.18",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.7.5",
+    "@types/request": "^2.48.3",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
